[package]
name = "ktv-casting"
version = "0.1.0"
edition = "2024"

[lib]
name = "ktv_casting_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"] # 加上 rlib 方便 main.rs 引用

[dependencies]
actix-files = "0.6.9"
actix-web = "4.12.1"
chrono = "0.4.42"
env_logger = "0.11.8"
indicatif = "0.17"
futures = "0.3.31"
futures-util = "0.3.31"
local-ip-address = "0.6.8"
log = "0.4.29"

reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls-webpki-roots",
] }

rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
    "tls12",
] }

tokio-tungstenite = { version = "0.22", default-features = false, features = [
    "rustls-tls-webpki-roots",
    "connect",
    "handshake",
] }

rupnp = "3.0.0"
serde = "1.0.228"
serde_json = "1.0.149"
mp4 = "0.14.0"
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
urlencoding = "2.1.3"
anyhow = "1.0"
webpki-roots = "0.26"
crossterm = "0.29.0"

# 安卓专用依赖
jni = "0.21"
android_logger = "0.13"

[patch.crates-io]
rupnp = { git = "https://github.com/aspromise/rupnp.git", branch = "fix/control-endpoint-leading-slash" }
