[package]
name = "ktv-casting"
version = "0.1.0"
edition = "2024"

[lib]
name = "ktv_casting_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"] # 加上 rlib 方便 main.rs 引用

[[bin]]
name = "ktv-cli"
path = "src/main.rs"
required-features = ["cli"] # 关键：防止 Android 编译时去检查 main.rs 的依赖

[dependencies]
actix-files = "0.6.9"
actix-web = "4.12.1"
chrono = "0.4.42"
futures = "0.3.31"
futures-util = "0.3.31"
local-ip-address = "0.6.8"
log = "0.4.29"

reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls-webpki-roots",
] }

rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
    "tls12",
] }

tokio-tungstenite = { version = "0.28.0", default-features = false, features = [
    "rustls-tls-webpki-roots",
    "connect",
    "handshake",
] }

rupnp = "3.0.0"
serde = "1.0.228"
serde_json = "1.0.149"
mp4 = "0.14.0"
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
urlencoding = "2.1.3"
anyhow = "1.0"

# CLI 专用依赖（标记为可选）
[target.'cfg(not(target_os = "android"))'.dependencies]
crossterm = { version = "0.29.0", optional = true }
indicatif = { version = "0.18.3", optional = true }
env_logger = { version = "0.11.8", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
android_logger = "0.15.1"

[features]
# 定义 cli feature，启用它时会同步开启上述依赖
default = ["cli"]
cli = ["crossterm", "indicatif", "env_logger"]

[patch.crates-io]
rupnp = { git = "https://github.com/aspromise/rupnp.git", branch = "fix/control-endpoint-leading-slash" }
